tests/duarouter/alternatives/style2_input/errors/route/route_prob_missing/errors.duarouter
Warning: No probability for route for vehicle '1', using default.
